# swagger-conformance

./: .pre-commit-config.yaml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py
examples/: datastore_api.py  ex_targeted_test.py
swaggercheck/: __main__.py  _basictests.py  client.py  codec.py
swaggercheck/schema/: _api.py  _operation.py  _parameter.py  _primitive.py
swaggercheck/strategies/: _strategyfactory.py  basestrategies.py  primitivestrategies.py
tests/: test_custom_types.py  test_swaggerconformance.py
tests/test_schemas/: all_constraints_schema.py  colour_custom_type.py  common.py  full_put_schema.py  mirror_requests.py
