[metadata]
name = swagger-check
author = See AUTHORS
author-email = eric@adimian.com
summary = Validate API against its swagger
description-file = readme.md
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
[files]
packages =
    swaggercheck
[wheel]
universal = 1
[yapf]
allow_split_before_dict_value = false
[options.entry_points]
console_scripts =
    swaggercheck = swaggercheck.__main__:main
[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401
